--- a/app/globals.css
+++ b/app/globals.css
@@ -2,32 +2,61 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+.bg-blue-gradient {
+  background: linear-gradient(
+    157.81deg,
+    #def9fa -43.27%,
+    #bef3f5 -21.24%,
+    #9dedf0 12.19%,
+    #7de7eb 29.82%,
+    #5ce1e6 51.94%,
+    #33bbcf 90.29%
+  );
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
+.blue__gradient {
+  background: linear-gradient(180deg, rgba(188, 165, 255, 0) 0%, #214d76 100%);
+  filter: blur(100px);
 }
+
+.pink__gradient {
+  background: linear-gradient(90deg, #c4eaf4 0%, #c4eaf4 100%);
+  filter: blur(800px);
+}
+
+.pink__gradient2 {
+  background: linear-gradient(90deg, #f4c4f3 0%, #fc67fa 50%);
+  filter: blur(150px);
+}
+.pink__gradient3 {
+  background: linear-gradient(90deg, #f4c4f3 0%, #fc67fa 50%);
+  filter: blur(80px);
+}
+
+.white__gradient {
+  background: rgba(255, 255, 255, 0.6);
+  filter: blur(300px);
+}
+
+/* styles/globals.css */
+
+@import "~typeface-poppins/index.css";
 
 body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+  font-family: "Poppins", sans-serif;
+}
+.text-gradient-to-right {
+  background-clip: text;
+  color: transparent;
+  background-image: linear-gradient(to right, #06b6d4, #9333eb);
+  margin-right: auto;
 }
 
-@layer utilities {
-  .text-balance {
-    text-wrap: balance;
-  }
+.text-gradient-to-right2 {
+  background-clip: text;
+  color: transparent;
+  background-image: linear-gradient(to right, #06b6d4, #9333eb);
+  -webkit-background-clip: text; /* Für ältere Webkit-basierte Browser */
+  background-size: 100% 100%; /* Breite des Farbverlaufs erhöhen */
+  margin: auto;
 }
